Add interactive Mandelbrot explorer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8" />
-<<<<<<< HEAD
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Sritata</title>
     <link rel="stylesheet" href="/style.css">
@@ -42,11 +41,11 @@
     <script>
       document.getElementById('year').textContent = new Date().getFullYear();
     </script>
-=======
     <title>Hello</title>
   </head>
   <body>
     hello world
->>>>>>> 339e414 (Initial commit)
+    <p>hello world</p>
+    <p><a href="/mandelbrot/index.html">Mandelbrot Explorer</a></p>
   </body>
 </html>
