--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hello</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Sritata</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <header class="site-header">
