--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		.subtitle{color:#444;margin:0 0 1rem 0}
 		.bio{line-height:1.6;font-size:1rem}
 		.actions a{display:inline-block;margin-top:1rem;padding:.6rem 1rem;background:#111;color:#fff;border-radius:6px;text-decoration:none}
+		.actions a:hover{background:#333}
 		footer{margin-top:3rem;color:#666;font-size:.9rem}
 	</style>
 </head>
@@ -23,7 +24,7 @@
 
 	<main>
 		<section class="bio">
-			<p>I’m a quantitative researcher completing a PhD in mathematics and physics at Yale. I’m motivated by understanding the meaning behind abstract formulations and by finding structural connections across fields. This emphasis on the “why” has consistently guided how I approach complex problems and design robust solutions. I’m interested in applied technical work where depth, rigor, and flexibility matter.</p>
+			<p>I'm a quantitative researcher completing a PhD in mathematics and physics at Yale. I'm motivated by understanding the meaning behind abstract formulations and by finding structural connections across fields. This emphasis on the "why" has consistently guided how I approach complex problems and design robust solutions. I'm interested in applied technical work where depth, rigor, and flexibility matter.</p>
 
 			<div class="actions">
 				<a href="public/mandelbrot/index.html">Explore the Mandelbrot</a>
