--- a/public/mandelbrot/index.html
+++ b/public/mandelbrot/index.html
@@ -5,113 +5,106 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Mandelbrot Interactive</title>
     <link rel="stylesheet" href="style.css">
-  <!doctype html>
-  <html>
-    <head>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width,initial-scale=1" />
-      <title>Mandelbrot Interactive</title>
-      <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-      <header>
-        <div class="wrap">
-          <h1>Mandelbrot Interactive</h1>
+  </head>
+  <body>
+    <header>
+      <div class="wrap">
+        <h1>Mandelbrot Interactive</h1>
+      </div>
+    </header>
+
+    <main class="wrap main-card">
+      <div class="controls">
+        <div>
+          <label>Width <input id="width" type="number" value="800"></label>
+          <label>Height <input id="height" type="number" value="600"></label>
         </div>
-      </header>
-
-      <main class="wrap main-card">
-        <div class="controls">
-          <div>
-            <label>Width <input id="width" type="number" value="800"></label>
-            <label>Height <input id="height" type="number" value="600"></label>
-          </div>
-          <div>
-            <label>Max Iter <input id="max_iter" type="number" value="300"></label>
-            <label>Scale <input id="scale" type="text" value="1.5"></label>
-          </div>
-          <div>
-            <label>X Center <input id="x_center" type="text" value="-0.5"></label>
-            <label>Y Center <input id="y_center" type="text" value="0.0"></label>
-          </div>
-          <div style="align-self:end">
-            <button id="render">Render</button>
-          </div>
+        <div>
+          <label>Max Iter <input id="max_iter" type="number" value="300"></label>
+          <label>Scale <input id="scale" type="text" value="1.5"></label>
         </div>
-
-        <p id="status"></p>
-        <div class="canvas-wrap">
-          <img id="img" src="" alt="mandelbrot result" style="max-width:100%;border:1px solid #ccc">
+        <div>
+          <label>X Center <input id="x_center" type="text" value="-0.5"></label>
+          <label>Y Center <input id="y_center" type="text" value="0.0"></label>
         </div>
-        <p class="hint">Click image to zoom. Edit parameters and click Render.</p>
-      </main>
+        <div style="align-self:end">
+          <button id="render">Render</button>
+        </div>
+      </div>
 
-      <script>
-        const btn = document.getElementById('render');
-        const img = document.getElementById('img');
-        const status = document.getElementById('status');
+      <p id="status"></p>
+      <div class="canvas-wrap">
+        <img id="img" src="" alt="mandelbrot result" style="max-width:100%;border:1px solid #ccc">
+      </div>
+      <p class="hint">Click image to zoom. Edit parameters and click Render.</p>
+    </main>
 
-        let busy = false;
-        function renderFromFields(){
-          if(busy) return;
-          busy = true;
-          btn.disabled = true;
-          const width = Number(document.getElementById('width').value);
-          const height = Number(document.getElementById('height').value);
-          const max_iter = Number(document.getElementById('max_iter').value);
-          const scale = document.getElementById('scale').value;
-          const x_center = document.getElementById('x_center').value;
-          const y_center = document.getElementById('y_center').value;
-          const q = new URLSearchParams({ width, height, max_iter, scale, x_center, y_center });
-          const url = '/api/mandelbrot?' + q.toString();
-          status.textContent = 'Rendering...';
-          img.src = url + '&_=' + Date.now();
-          img.onload = ()=>{ status.textContent = 'Rendered'; busy=false; btn.disabled=false; };
-          img.onerror = ()=>{ status.textContent = 'Render failed'; busy=false; btn.disabled=false; };
-        }
+    <script>
+      const btn = document.getElementById('render');
+      const img = document.getElementById('img');
+      const status = document.getElementById('status');
 
-        btn.addEventListener('click', ()=>{ renderFromFields(); });
+      let busy = false;
+      function renderFromFields(){
+        if(busy) return;
+        busy = true;
+        btn.disabled = true;
+        const width = Number(document.getElementById('width').value);
+        const height = Number(document.getElementById('height').value);
+        const max_iter = Number(document.getElementById('max_iter').value);
+        const scale = document.getElementById('scale').value;
+        const x_center = document.getElementById('x_center').value;
+        const y_center = document.getElementById('y_center').value;
+        const q = new URLSearchParams({ width, height, max_iter, scale, x_center, y_center });
+        const url = '/render?' + q.toString();
+        status.textContent = 'Rendering...';
+        img.src = url + '&_=' + Date.now();
+        img.onload = ()=>{ status.textContent = 'Rendered'; busy=false; btn.disabled=false; };
+        img.onerror = ()=>{ status.textContent = 'Render failed'; busy=false; btn.disabled=false; };
+      }
 
-        // Click-to-zoom
-        img.addEventListener('click', function(ev){
-          if(busy) return;
-          if(!img.naturalWidth || !img.naturalHeight) return;
-          const rect = img.getBoundingClientRect();
-          const px = (ev.clientX - rect.left) * (img.naturalWidth / rect.width);
-          const py = (ev.clientY - rect.top) * (img.naturalHeight / rect.height);
+      btn.addEventListener('click', ()=>{ renderFromFields(); });
 
-          const width = Number(document.getElementById('width').value);
-          const height = Number(document.getElementById('height').value);
-          let scale = Number(document.getElementById('scale').value);
-          let x_center = Number(document.getElementById('x_center').value);
-          let y_center = Number(document.getElementById('y_center').value);
+      // Click-to-zoom
+      img.addEventListener('click', function(ev){
+        if(busy) return;
+        if(!img.naturalWidth || !img.naturalHeight) return;
+        const rect = img.getBoundingClientRect();
+        const px = (ev.clientX - rect.left) * (img.naturalWidth / rect.width);
+        const py = (ev.clientY - rect.top) * (img.naturalHeight / rect.height);
 
-          const x_min = x_center - scale;
-          const x_max = x_center + scale;
-          const y_scale = scale * height / width;
-          const y_min = y_center - y_scale;
-          const y_max = y_center + y_scale;
+        const width = Number(document.getElementById('width').value);
+        const height = Number(document.getElementById('height').value);
+        let scale = Number(document.getElementById('scale').value);
+        let x_center = Number(document.getElementById('x_center').value);
+        let y_center = Number(document.getElementById('y_center').value);
 
-          const x = x_min + (x_max - x_min) * px / Math.max(1, (width - 1));
-          const y = y_min + (y_max - y_min) * py / Math.max(1, (height - 1));
+        const x_min = x_center - scale;
+        const x_max = x_center + scale;
+        const y_scale = scale * height / width;
+        const y_min = y_center - y_scale;
+        const y_max = y_center + y_scale;
 
-          x_center = x;
-          y_center = y;
-          scale = scale * 0.25;
+        const x = x_min + (x_max - x_min) * px / Math.max(1, (width - 1));
+        const y = y_min + (y_max - y_min) * py / Math.max(1, (height - 1));
 
-          const maxIterEl = document.getElementById('max_iter');
-          const newMax = Math.max(10, Math.min(20000, Math.floor(Number(maxIterEl.value) * 1.25)));
-          maxIterEl.value = newMax;
+        x_center = x;
+        y_center = y;
+        scale = scale * 0.25;
 
-          document.getElementById('x_center').value = x_center;
-          document.getElementById('y_center').value = y_center;
-          document.getElementById('scale').value = scale;
+        const maxIterEl = document.getElementById('max_iter');
+        const newMax = Math.max(10, Math.min(20000, Math.floor(Number(maxIterEl.value) * 1.25)));
+        maxIterEl.value = newMax;
 
-          renderFromFields();
-        });
+        document.getElementById('x_center').value = x_center;
+        document.getElementById('y_center').value = y_center;
+        document.getElementById('scale').value = scale;
 
-        // initial render
         renderFromFields();
-      </script>
-    </body>
-  </html>
+      });
+
+      // initial render
+      renderFromFields();
+    </script>
+  </body>
+</html>
