--- a/public/mandelbrot/index.html
+++ b/public/mandelbrot/index.html
@@ -56,7 +56,7 @@
         const x_center = document.getElementById('x_center').value;
         const y_center = document.getElementById('y_center').value;
         const q = new URLSearchParams({ width, height, max_iter, scale, x_center, y_center });
-        const url = '/render?' + q.toString();
+        const url = '/api/mandelbrot?' + q.toString();
         status.textContent = 'Rendering...';
         img.src = url + '&_=' + Date.now();
         img.onload = ()=>{ status.textContent = 'Rendered'; busy=false; btn.disabled=false; };
