--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,13 @@
       <div class="wrap">
         <h1 class="site-title">Sritata</h1>
         <nav class="site-nav">
-          <a href="/mandelbrot/index.html">Mandelbrot</a>
           <a href="/pdfs/">Papers</a>
+          <div class="nav-dropdown">
+            <button type="button" class="nav-dropdown-trigger" aria-haspopup="true" aria-expanded="false">Toy Projects ▾</button>
+            <div class="nav-dropdown-menu" role="menu">
+              <a href="/mandelbrot/index.html" role="menuitem">Mandelbrot</a>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
@@ -24,13 +29,13 @@
         <p class="lead">I’m drawn to applied roles in tech that reward deep thinking, strong fundamentals, and curiosity.</p>
         <p class="actions">
           <a class="btn" href="/pdfs/">See my papers</a>
-          <a class="btn btn-outline" href="/mandelbrot/index.html">Explore Mandelbrot</a>
+          <a class="btn btn-outline" href="/mandelbrot/index.html">Explore the Mandelbrot set</a>
         </p>
       </section>
 
       <section class="about">
         <h3>About my approach</h3>
-        <p>My work centers on translating abstract theory into clear intuition and practical tools. I value concise explanations, robust mathematical foundations, and solutions that scale from toy problems to real-world applications.</p>
+        <p>My work centers on translating abstract theory into clear intuition and practical computational tools. I value lucid explanations, robust mathematical foundations.</p>
       </section>
     </main>
 
