--- a/public/mandelbrot/index.html
+++ b/public/mandelbrot/index.html
@@ -4,12 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Mandelbrot Interactive</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/mandelbrot/style.css">
   </head>
   <body>
-    <header>
+    <header class="site-header">
       <div class="wrap">
-        <h1>Mandelbrot Interactive</h1>
+        <h1 class="site-title">Sritata</h1>
+        <nav class="site-nav">
+          <a href="#">CV</a>
+          <a href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">My Papers</a>
+          <div class="nav-dropdown">
+            <button type="button" class="nav-dropdown-trigger" aria-haspopup="true" aria-expanded="false">Toy Projects ▾</button>
+            <div class="nav-dropdown-menu" role="menu">
+              <a href="/mandelbrot/index.html" role="menuitem">Explore Mandelbrot</a>
+            </div>
+          </div>
+          <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
+        </nav>
       </div>
     </header>
 
