--- a/public/mandelbrot/index.html
+++ b/public/mandelbrot/index.html
@@ -10,9 +10,9 @@
   <body>
     <header class="site-header">
       <div class="wrap">
-        <h1 class="site-title">Sritata</h1>
+        <h1 class="site-title">Sri Tata</h1>
         <nav class="site-nav">
-          <a href="#">CV</a>
+          <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
           <a href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">My Papers</a>
           <div class="nav-dropdown">
             <button type="button" class="nav-dropdown-trigger" aria-haspopup="true" aria-expanded="false">Toy Projects ▾</button>
@@ -20,7 +20,6 @@
               <a href="/mandelbrot/index.html" role="menuitem">Explore Mandelbrot</a>
             </div>
           </div>
-          <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
         </nav>
       </div>
     </header>
