--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Sritata</title>
+    <title>Sri Tata</title>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
