--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       <div class="wrap">
         <h1 class="site-title">Sri Tata</h1>
         <nav class="site-nav">
+          <a href="/index.html" target="_blank" rel="noopener">Home</a>
           <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
           <a href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">My Papers</a>
           <div class="nav-dropdown">
@@ -29,14 +30,10 @@
         <p class="lead">I’m a mathematical physicist finishing a PhD at Yale. I enjoy understanding what abstract mathematical ideas are really saying — why certain structures appear, how different fields connect, and how that perspective shapes effective problem-solving.</p>
         <p class="lead">I’m drawn to applied roles in tech that reward deep thinking, strong fundamentals, and curiosity.</p>
         <p class="actions">
-          <a class="btn btn-outline" href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
+          <a class="btn" href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
           <a class="btn" href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">See my papers</a>
           <a class="btn btn-outline" href="/mandelbrot/index.html">Explore Mandelbrot</a>
         </p>
-      </section>
-
-      <section class="about">
-        <h3>About my approach</h3>
       </section>
     </main>
 
