--- a/public/mandelbrot/index.html
+++ b/public/mandelbrot/index.html
@@ -9,9 +9,9 @@
   <body>
     <header class="site-header">
       <div class="wrap">
-        <h1 class="site-title">Sri Tata</h1>
+        <h1 class="site-title">Mandelbrot Interactive</h1>
         <nav class="site-nav">
-          <a href="/index.html" target="_blank" rel="noopener">Home</a>
+          <a href="/index.html">Home</a>
           <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
           <a href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">My Papers</a>
           <div class="nav-dropdown">
