--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <h1 class="site-title">Sri Tata</h1>
         <nav class="site-nav">
           <a href="/index.html">Home</a>
-          <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
+          <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">CV</a>
           <a href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">My Papers</a>
           <div class="nav-dropdown">
             <button type="button" class="nav-dropdown-trigger" aria-haspopup="true" aria-expanded="false">Toy Projects ▾</button>
@@ -30,7 +30,7 @@
         <p class="lead">I’m a mathematical physicist finishing a PhD at Yale. I enjoy understanding what abstract mathematical ideas are really saying — why certain structures appear, how different fields connect, and how that perspective shapes effective problem-solving.</p>
         <p class="lead">I’m drawn to applied roles in tech that reward deep thinking, strong fundamentals, and curiosity.</p>
         <p class="actions">
-          <a class="btn" href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
+          <a class="btn" href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">CV</a>
           <a class="btn" href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">See my papers</a>
           <a class="btn btn-outline" href="/mandelbrot/index.html">Explore Mandelbrot</a>
         </p>
@@ -38,7 +38,7 @@
     </main>
 
     <footer class="site-footer">
-      <div class="wrap">&copy; <!-- year --> <span id="year"></span> — Built by Sritata</div>
+      <div class="wrap">&copy; <!-- year --> <span id="year"></span> — Built by Sri Tata</div>
     </footer>
 
     <script>
