--- a/public/mandelbrot/index.html
+++ b/public/mandelbrot/index.html
@@ -12,7 +12,7 @@
         <h1 class="site-title">Mandelbrot Interactive</h1>
         <nav class="site-nav">
           <a href="/index.html">Home</a>
-          <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">Resume</a>
+          <a href="/Sri%20Tata%20Resume.pdf" target="_blank" rel="noopener">CV</a>
           <a href="https://arxiv.org/search/?searchtype=author&query=Tata%2C+Sri">My Papers</a>
           <div class="nav-dropdown">
             <button type="button" class="nav-dropdown-trigger" aria-haspopup="true" aria-expanded="false">Toy Projects ▾</button>
@@ -23,7 +23,7 @@
         </nav>
       </div>
     </header>
-
+ 
     <main class="wrap main-card">
       <p class="top-note">
         This is a slow web version of a mandelbrot zoom-in app! For a faster Python script you can run locally, visit <a href="https://github.com/sritata/mandelbrot">https://github.com/sritata/mandelbrot</a>. There, you can zoom in faster, and it even generates a GIF of your zoom-in (see example below).
