--- a/public/mandelbrot/index.html
+++ b/public/mandelbrot/index.html
@@ -67,7 +67,7 @@
 
       <section class="example-zoom">
         <h2>Example zoom-in GIF (from the Python app)</h2>
-        <img src="/zoom.gif" alt="Mandelbrot zoom-in animation" class="example-gif">
+        <img src="/zoom.gif" alt="Mandelbrot zoom-in animation" class="example-gif" style="display:block;margin:0 auto;max-width:100%;height:auto;">
       </section>
     </main>
 
